[gd_scene load_steps=5 format=3 uid="uid://cec6vei3ppdyd"]

[ext_resource type="Script" uid="uid://xcjyjo4tnr6e" path="res://Scipts/Menu.gd" id="1_2fv48"]
[ext_resource type="FontFile" uid="uid://d2fw433di3e0f" path="res://Assets/UI/Fonts/consolas.ttf" id="2_jps05"]

[sub_resource type="Theme" id="Theme_68ynx"]
default_font = ExtResource("2_jps05")
default_font_size = 14
TextEdit/fonts/font = ExtResource("2_jps05")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2hlvu"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
size_flags_horizontal = 0
script = ExtResource("1_2fv48")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -121.0
offset_bottom = 101.0
grow_horizontal = 0

[node name="Reset Button" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Reset Game"

[node name="Respawn Player" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Respawn Player"

[node name="Respawn Enemies" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Reset Enemies"

[node name="Quit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Quit"

[node name="Log_Console" type="TextEdit" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -277.0
offset_right = 460.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 4
focus_mode = 1
mouse_default_cursor_shape = 0
theme = SubResource("Theme_68ynx")
theme_override_colors/font_readonly_color = Color(0, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_2hlvu")
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
draw_control_chars = true

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_right = 17.0
offset_bottom = 89.0
grow_horizontal = 2

[node name="Score Count" type="Label" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
text = "Test"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Reset Button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Respawn Player" to="." method="_on_respawn_player_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Respawn Enemies" to="." method="_on_respawn_enemies_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
